feat: multi-ldes-client: file