@@ -7,49 +7,46 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.stream.Stream;
 
 public class FileManagerFactory {
-	private static FileManagerFactory instance = null;
-	private final FileManager fileManager;
-	public static final String STATE_DIRECTORY = "state";
+	public static final String STATE_FOLDER = "ldes-client";
+	private static final Map<String, FileManagerFactory> instances = new HashMap<>();
 	private static boolean stateDeleted = false;
 
-	public FileManagerFactory() {
-		fileManager = new FileManager();
-	}
-
-	public static synchronized FileManagerFactory getInstance() {
-		if (instance == null) {
+	public static synchronized FileManagerFactory getInstance(String instanceName) {
+		return instances.computeIfAbsent(instanceName, s -> {
 			try {
-				Files.createDirectories(Paths.get(STATE_DIRECTORY));
+				Files.createDirectories(Paths.get("%s/%s".formatted(STATE_FOLDER, instanceName)));
 			} catch (IOException e) {
 				throw new CreateDirectoryFailedException(e);
 			}
-			instance = new FileManagerFactory();
+			var instance = new FileManagerFactory();
 			stateDeleted = false;
-		}
-
-		return instance;
+			return instance;
+		});
 	}
 
-	public FileManager getFileManager() {
-		return fileManager;
+	public FileManager getFileManager(String directory) {
+		return new FileManager(directory);
 	}
 
-	public static void destroyState() {
+	public void destroyState(String instanceName) {
 		try {
-			instance = null;
+			instances.remove(instanceName);
 			if (!stateDeleted) {
-				deleteState();
+				deleteState(instanceName);
 			}
 		} catch (IOException e) {
 			throw new DestroyStateFailedException(e);
 		}
 	}
 
-	private static void deleteState() throws IOException {
-		try (Stream<Path> list = Files.list(Paths.get(STATE_DIRECTORY))) {
+	private void deleteState(String instanceName) throws IOException {
+		Path statePath = Path.of(instanceName);
+		try (Stream<Path> list = Files.list(statePath)) {
 			list.forEach(path -> {
 				try {
 					Files.delete(path);
@@ -58,7 +55,7 @@ public class FileManagerFactory {
 				}
 			});
 		}
-		Files.delete(Paths.get(STATE_DIRECTORY));
+		Files.delete(statePath);
 		stateDeleted = true;
 	}
 }
